# bicimad_data_manager

./: .coverage  .gitignore  README.md  pyproject.toml
bicimad/: __init__.py  bicimad.py
bicimad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bicimad.py
tests/datos/: emt_datos.html
